# ai-edge-computing-tiny-embedded

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  LESSONS-LEARNED.md  README.md  pyproject.toml
docs/workflows/: README.md  ci.yml.example
src/ai_edge_tinyml/: __init__.py  model_optimizer.py  quantization.py  utils.py
tests/: __init__.py  conftest.py  test_quantization.py  test_utils.py
