[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-edge-tinyml"
version = "0.1.0"
description = "State-of-the-art AI Edge Computing & TinyML toolkit for embedded systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ümit Kacar", email = "umitkacar@users.noreply.github.com" },
]
keywords = [
    "tinyml",
    "edge-ai",
    "embedded-ml",
    "model-compression",
    "quantization",
    "neural-architecture-search",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Embedded Systems",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.3.0",
    "mypy>=1.7.0",
    "ruff>=0.1.6",
    "black>=23.11.0",
    "pre-commit>=3.5.0",
    "ipython>=8.17.0",
    "ipdb>=0.13.13",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
]
all = ["ai-edge-tinyml[dev,docs]"]

[project.urls]
Homepage = "https://github.com/umitkacar/ai-edge-computing-tiny-embedded"
Repository = "https://github.com/umitkacar/ai-edge-computing-tiny-embedded"
Issues = "https://github.com/umitkacar/ai-edge-computing-tiny-embedded/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_edge_tinyml"]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "mypy",
    "ruff",
    "black",
    "bandit[toml]",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=src/ai_edge_tinyml --cov-report=term-missing --cov-report=html --cov-report=xml {args:tests}"
test-parallel = "pytest -n auto {args:tests}"
test-parallel-cov = "pytest -n auto --cov=src/ai_edge_tinyml --cov-report=term-missing --cov-report=html --cov-report=xml {args:tests}"
lint = "ruff check {args:src tests}"
lint-fix = "ruff check --fix {args:src tests}"
format = "black {args:src tests}"
format-check = "black --check {args:src tests}"
type-check = "mypy {args:src tests}"
security = "bandit -r src -c pyproject.toml"
all = [
    "format",
    "lint",
    "type-check",
    "test-cov",
]
ci = [
    "format-check",
    "lint",
    "type-check",
    "security",
    "test-parallel-cov",
]

# =============================================================================
# RUFF Configuration - Ultra-modern linter & formatter
# =============================================================================
[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4

# Source code directories
src = ["src", "tests"]

# Exclude patterns
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# Enable comprehensive rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "D",      # pydocstyle
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit
    "BLE",    # flake8-blind-except
    "FBT",    # flake8-boolean-trap
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "EXE",    # flake8-executable
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PD",     # pandas-vet
    "PGH",    # pygrep-hooks
    "PL",     # pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "NPY",    # numpy-specific rules
    "PERF",   # performance anti-patterns
    "RUF",    # ruff-specific rules
]

# Ignore specific rules
ignore = [
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
    "COM812",  # Trailing comma missing (conflicts with formatter)
    "ISC001",  # Implicit string concatenation (conflicts with formatter)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Use of assert detected
    "ARG001",  # Unused function argument
    "ARG002",  # Unused method argument
    "FBT001",  # Boolean positional arg in function definition
    "PLR2004", # Magic value used in comparison
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
    "NPY002",  # Legacy numpy random calls (acceptable in tests)
]
"__init__.py" = [
    "F401",    # Imported but unused
]

[tool.ruff.lint.isort]
known-first-party = ["ai_edge_tinyml"]
force-sort-within-sections = true
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"  # Use Google-style docstrings

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 15
max-returns = 8
max-statements = 60

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# BLACK Configuration - Code formatter
# =============================================================================
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # defaults
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# =============================================================================
# MYPY Configuration - Static type checker
# =============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
strict_equality = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Exclude patterns
exclude = [
    "^build/",
    "^dist/",
    "^.venv/",
]

# Per-module options
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = [
    "onnx.*",
    "onnxruntime.*",
]
ignore_missing_imports = true

# =============================================================================
# PYTEST Configuration - Testing framework
# =============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",                          # Show summary of all test outcomes
    "--strict-markers",             # Raise error on unknown markers
    "--strict-config",              # Raise error on invalid config
    "--showlocals",                 # Show local variables in tracebacks
    "--tb=short",                   # Short traceback format
    "--cov=src/ai_edge_tinyml",     # Coverage for source code
    "--cov-report=term-missing",    # Show missing lines in terminal
    "--cov-report=html",            # Generate HTML coverage report
    "--cov-report=xml",             # Generate XML coverage report (for CI)
    "--cov-branch",                 # Measure branch coverage
    "--cov-fail-under=80",          # Fail if coverage is below 80%
    "-vv",                          # Verbose output
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "error",                                       # Turn warnings into errors
    "ignore::DeprecationWarning",                  # Ignore deprecation warnings
    "ignore::PendingDeprecationWarning",           # Ignore pending deprecation warnings
]

# =============================================================================
# COVERAGE Configuration - Code coverage measurement
# =============================================================================
[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/venv/*",
]
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    # Standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# =============================================================================
# Additional Development Tools
# =============================================================================

# Bandit - Security linting (used by ruff)
[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101", "B601"]
